# binja_coolsigmaker

./: Cargo.toml  README.md  plugin.json
.github/workflows/: rust.yml
src/: lib.rs
