[package]
name    = "binja_sigmaker"
version = "0.1.0"
authors = ["unknowntrojan"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log         = "0.4.17"
clipboard   = "0.5.0"
binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", branch = "dev" }
findpattern = { git = "https://github.com/unknowntrojan/findpattern", features = ["parallel"] }
iced-x86    = "1.17.0"
